Bug 992853: Fix the rebase error in bug 968604 that caused debug build crash in launching the browser app. r=khuey a=1.3t+